# text-summarize-agent

./: .env  README.md  filelist.txt  pyproject.toml  requirements.txt
src/: app.py
src/python_practice/: __init__.py
