[project]
name = "python-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Asia-parveen", email = "beautyhealthytips177@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
   
]

[project.scripts]
python-practice = "python_practice:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
